Change page description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tea875 Store</title>
-	<meta name="description" content="Scroll-driven animations for columns and rows powered by GSAP" />
+	<meta name="description" content="Пуэр делает меня добрее" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 </head>
